🗃️ error free skeleton

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=Nunito+Sans:wght@300;400&display=swap" rel="stylesheet">
 
     {%- if settings.favicon != blank -%}
-      <link rel="icon" type="image/png" href="{{ settings.favicon | img_url: '32x32' }}">
+      <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: '32x32' }}">
     {%- endif -%}
 
     <title>
