--- a/sections/demo.liquid
+++ b/sections/demo.liquid
@@ -6,14 +6,14 @@
 
 {% schema %}
 {
-    "name": "Announcement Bar",
+    "name": "Demo",
     "settings": [
         
     ],
 
     "presets": [
         {
-            "name":""
+            "name":"Demo"
         }
     ]
 }
