--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -1,6 +1,6 @@
 <article>
     {% if article.image %} 
-        <img src="{{ article.image | img_url: 'master' }}" width="{{ article.image.width }}" height="{{ article.image.width }}" loading="lazy" alt="{{ article.image.alt }}">
+        <img src="{{ article.image | image_url: 'master' }}" width="{{ article.image.width }}" height="{{ article.image.width }}" loading="lazy" alt="{{ article.image.alt }}">
     {% endif %}
     <h2> {{ article.title }} </h2>
     <div>
