--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -20,7 +20,7 @@
                                     {% if item.image %}
                                         <a href="{{ item.url }}"></a>
                                         <img class="cart-item__image"
-                                            src="{{ item.image | img_url: '300x' }}"
+                                            src="{{ item.image | image_url: '300x' }}"
                                             alt="{{ item.image.alt | escape }}"
                                             loading="lazy"
                                             width="150"
