--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,7 +34,7 @@
     {{ content_for_header }}
 
 
-    {{ 'base.scss.css' | asset_url | stylesheet_tag }}
+    {{ 'base.css' | asset_url | stylesheet_tag }}
 
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
     if (Shopify.designMode) {
