--- a/assets/base.css
+++ b/assets/base.css
@@ -32,23 +32,14 @@
     box-sizing: inherit;
 }
 
-$bp-largest: 75em;     // 1200px
-$bp-large: 68.75em;    // 1100px
-$bp-medium: 56.25em;   // 900px
-$bp-small: 37.5em;     // 600px
-$bp-smallest: 31.25em; // 500px
-
 h1, h2, h3, h4, h5, h6, p {
-    font-family: var(--font-montserrat);
-
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
-
-    @media only screen and (max-width: $bp-large) {
-        font-size: 50%;
-    }
+    font-size: 62.5%; 
 }
+
