--- a/assets/base.css
+++ b/assets/base.css
@@ -1,26 +1,3 @@
-
-:root {
-    --color-primary: #efefef;
-    --color-secondary: #1c1b1b;
-    --color-tritary: #6a6a6a;
-        
-    --color-grey-dark-1: #333;
-    --color-grey-dark-2: #777;
-    --color-grey-dark-3: #999;
-
-    --color-white: #fff;
-    --color-black: #000000;
-
-    --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
-    --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
-
-    --line: 1px solid var(--color-grey-light-2);
-
-    --font-montserrat: 'Montserrat', sans-serif;
-    --font-nunitosans: 'Nunito Sans', sans-serif;
-
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -37,9 +14,28 @@ h1, h2, h3, h4, h5, h6, p {
     font-weight: 400;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    font-size: 16px;
+    color: var(--color-black);
+    font-family: var(--font-montserrat);
+}
 
 html {
     box-sizing: border-box;
     font-size: 62.5%; 
 }
+
+.page-width {
+    max-width: var(--page-width);
+    margin: auto;
+    padding: 0 2.5rem;
+}
+
 
