--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -33,6 +33,31 @@
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     {{ content_for_header }}
 
+    <style>
+      :root {
+        --color-primary: #efefef;
+        --color-secondary: #1c1b1b;
+        --color-tritary: #6a6a6a;
+            
+        --color-grey-dark-1: #333;
+        --color-grey-dark-2: #777;
+        --color-grey-dark-3: #999;
+
+        --color-white: #fff;
+        --color-black: #000000; 
+
+        --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+        --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
+
+        --line: 1px solid var(--color-grey-light-2);
+
+        --font-montserrat: 'Montserrat', sans-serif;
+        --font-nunitosans: 'Nunito Sans', sans-serif;
+
+        --page-width: 120rem;
+
+      }
+    </style>
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
 
