--- a/assets/header.scss.liquid
+++ b/assets/header.scss.liquid
@@ -6,7 +6,7 @@
 
 .nav-list {
     display: flex;
-    align-items: center ;
+    align-items: center;
 }
 
 .nav-list-lft {
@@ -15,6 +15,13 @@
 
 .nav-list-item {
     margin: 0 2rem;
+}
+
+.nav-list-link {
+    &:hover {
+        text-decoration: underline;
+        text-underline-offset: 2px;
+    }
 }
 
 .logobox {
