--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,9 +1,39 @@
-<div>
-    
-</div>
+{{ 'hero.scss.css' | asset_url | stylesheet_tag }}
+
+<section>
+    <div class="hero">
+        <div class="hero-image-wpr">
+            {% assign image = 'hero-image.jpg' | asset_img_url: 'master' %}
+<!--             
+            <div class="hero-image lazyload" aria-label="Blueberry Coconut" title="Blueberry Coconut" data-bgset="{{ image }}" data-parent-fit="cover" data-aspectratio="1.0"> </div> -->
+
+            {% render 'image-as-background', isAsset: true, imageUrl: 'hero-image.jpg', className: 'hero-image' %}
+
+        </div>
+    </div>
+</section>
 
 {% schema %}
 {
-    "name": "Hero"
+    "name": "Hero",
+    "blocks": [
+        {
+            "type": "images",
+            "name": "Hero Images",
+           "settings": [
+                {
+                   "type": "image_picker",
+                   "id": "hero_image",
+                   "label": "Hero Image Item"
+                },
+                {
+                    "type": "text",
+                    "id": "hero_title",
+                    "label": "Hero Title",
+                    "default": "Hero Title"
+                }
+           ]
+        }
+    ]
 }
 {% endschema %}
