--- a/assets/base.css
+++ b/assets/base.css
@@ -39,3 +39,13 @@ html {
 }
 
 
+/* -------------------------------------------------------------------------- */
+/*                                   headings                                 */
+/* -------------------------------------------------------------------------- */
+
+.title {
+    font-family: var(--font-montserrat);
+    font-weight: 400;
+    font-size: 4rem;
+    
+}
