--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -1,29 +1,22 @@
+{{ 'collecion-banner.scss.css' | asset_url | stylesheet_tag }}
+
 <div class="collection-hero">
-    <h1> {{ collection.title | escape }} </h1>
+    {%- liquid 
+        if collection.image 
+            render 'image-as-background', imageUrl: collection.image, className: 'collection-hero-image'
+        else 
+            render 'image-as-background', isAsset: true, imageUrl: 'collection-image-2.jpg', className: 'collection-hero-image' 
+        endif 
+    %}
 
-    <div class="collection-desc">
-        {{ collection.description }}
+    <div class="collection-info">
+        <h2 class="title"> {{ collection.title | escape }}  </h2>
+        {% if collection.description %}
+            <div class="collection-desc">
+                {{ collection.description }}
+            </div>
+        {% endif %}
     </div>
-
-    {% if collection.image %}
-        <div>
-            <img
-            srcset="{%- if collection.image.width >= 165 -%}{{ collection.image | image_url: '165x' }} 165w,{%- endif -%}
-                {%- if collection.image.width >= 360 -%}{{ collection.image | image_url: '360x' }} 360w,{%- endif -%}
-                {%- if collection.image.width >= 535 -%}{{ collection.image | image_url: '535x' }} 535w,{%- endif -%}
-                {%- if collection.image.width >= 750 -%}{{ collection.image | image_url: '750x' }} 750w,{%- endif -%}
-                {%- if collection.image.width >= 1070 -%}{{ collection.image | image_url: '1070x' }} 1070w,{%- endif -%}
-                {%- if collection.image.width >= 1500 -%}{{ collection.image | image_url: '1500x' }} 1500w,{%- endif -%}
-                {{ collection.image | image_url: 'master' }} {{ collection.image.width }}w"
-            src="{{ collection.image | image_url: '750x' }}"
-            sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px, (min-width: 750px) calc(50vw - 130px), calc(50vw - 55px)"
-            alt="{{ collection.title | escape }}"
-            loading="lazy"
-            width="{{ collection.image.width }}"
-            height="{{ collection.image.height }}"
-            >
-        </div>
-    {% endif %}
 </div>
 
 {% schema %}
