--- a/sections/main-collection-product-list.liquid
+++ b/sections/main-collection-product-list.liquid
@@ -1,17 +1,25 @@
 
+<script src="{{ 'facets.js' | asset_url }}" defer="defer"></script>
+
+{% render 'collection-filter', results: collection, enable_filtering: true, enable_sorting: true, collapse_on_larger_devices: true  %}
+
 
 <div id="ProductGridContainer">
+
+
     {% paginate collection.products by section.settings.products_per_page %}
 
         {%- if collection.products.size == 0 -%}
-            <div>
-                <div class="empty-product" id="product-grid" data-id="{{ section.id }}">
-                    <h1> No product Found </h1>
+            <div class="collection">
+                <div>
+                    <div class="empty-product" id="product-grid" data-id="{{ section.id }}">
+                        <h1> No product Found </h1>
+                    </div>
                 </div>
             </div>
         {%- else -%}
-            <div class="collections" id="product-grid" data-id="{{ section.id }}">
-                <div class="collections-product-list" >
+            <div class="collection" id="product-grid" data-id="{{ section.id }}">
+                <div class="collection-product-list" >
                     {% for product in collection.products %}
                         {% render 'product-card', product: product %}
                     {% endfor %}
