--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,11 +54,13 @@
         --font-montserrat: 'Montserrat', sans-serif;
         --font-nunitosans: 'Nunito Sans', sans-serif;
 
-        --page-width: 120rem;
+        --page-width: 180rem;
 
         --image-size: cover;
         --image-aspect-ratio: 130.0%;
         --image-aspect-ratio-half: 65.0%;
+        --icon-loader: url( "//cdn.shopify.com/s/files/1/0616/7681/4588/files/Infinity-1.1s-200px.svg?v=1640611753" )
+        
 
       }
     </style>
