--- a/assets/header.scss.liquid
+++ b/assets/header.scss.liquid
@@ -1,7 +1,7 @@
 .nav {
     display: grid;
     grid-template-columns: 1fr 130px 1fr;
-    padding: 2rem 0;
+    padding: 2rem 2.5rem;
 }
 
 .nav-list {
