--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -59,7 +59,7 @@
         --image-size: cover;
         --image-aspect-ratio: 130.0%;
         --image-aspect-ratio-half: 65.0%;
-        --icon-loader: url( "//cdn.shopify.com/s/files/1/0616/7681/4588/files/Infinity-1.1s-200px.svg?v=1640611753" )
+        --icon-loader: url( "https://cdn.shopify.com/s/files/1/0616/7681/4588/files/Infinity-1.1s-200px_1.svg?v=1642578678" )
         
 
       }
@@ -76,7 +76,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="allow-image-animations">
     {%- comment -%}
       <a class="skip-to-content-link button visually-hidden" href="#MainContent">
         {{ "accessibility.skip_to_text" | t }}
