🚑 iocn -loader change

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -59,7 +59,7 @@
         --image-size: cover;
         --image-aspect-ratio: 130.0%;
         --image-aspect-ratio-half: 65.0%;
-        --icon-loader: url( "https://cdn.shopify.com/s/files/1/0616/7681/4588/files/Infinity-1.1s-200px_1.svg?v=1642578678" )
+        --icon-loader: url( "https://cdn.shopify.com/s/files/1/0616/7681/4588/files/Infinity-1.1s-200px_1_24c508e9-769e-4064-830c-77eea26ddb7b.svg?v=1642579436" )
         
 
       }
