--- a/assets/feature-article.css
+++ b/assets/feature-article.css
@@ -64,8 +64,8 @@
   width: 100%;
   height: 1px;
   left: 0;
-  bottom: 0;
-  background: currentColor;
+  bottom: -3px;
+  background: var(--color-secondary);
   transform: scale(1);
   transform-origin: bottom right;
   transition: transform .2s ease-in-out;
