--- a/assets/header.scss.liquid
+++ b/assets/header.scss.liquid
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 130px 1fr;
     padding: 2rem 2.5rem;
+    align-items: center;
 }
 
 .nav-list {
